service/kubia-svc-load.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-load-balancer-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
