service/node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-node-port
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 8443
    nodePort: 30133
  selector:
    k8s-app: kubernetes-dashboard
    pod-template-hash: 6c7ccbcf87
