service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nfs
spec:
  type: LoadBalancer
  selector:
    app: nfs
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
