service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress
spec:
  tls:
  - hosts:
    - kubia.k8s.com
    secretName: tls-secret
  rules:
  - host: kubia.k8s.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: kubia-load-balancer-svc
            port:
              number: 80
